<!--
  ~     LM videodownloader is a browser app for android, made to easily
  ~     download videos.
  ~     Copyright (C) 2018 Loremar Marabillas
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<!--
  ~     LM videodownloader is a browser app for android, made to easily
  ~     download videos.
  ~     Copyright (C) 2018 Loremar Marabillas
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<!--
  ~     LM videodownloader is a browser app for android, made to easily
  ~     download videos.
  ~     Copyright (C) 2018 Loremar Marabillas
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<resources>
    <string name="app_name">LM videodownloader</string>
    <string name="enter_web">Type URL or search</string>
    <string name="prev">Back</string>
    <string name="next">Next</string>
    <string name="bookmark_this_page">Bookmark This</string>
    <string name="rename">Rename</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="queue">Queue</string>
    <string name="close">Close</string>
    <string name="reload">Reload</string>
    <string name="plus">+</string>
    <string name="xClose">X</string>
    <string name="home">Home</string>
    <string name="browser">Browser</string>
    <string name="downloads">Downloads</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="speed_0">Speed: 0KB/s</string>
    <string name="remaining_undefine">Remaining: —</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="downloads_inactive_instruction">Press the Go to Page Button. When the page is
        loaded, play the required video. Wait until app gets the new updated link</string>
    <string name="clear_all_finished">Clear All Finished</string>
    <string name="play_video">Play Video</string>
    <string name="go_to_page">Go to Page</string>
    <string name="rearrange_instructions">Click Move and drag the item to rearrange
        its position</string>
    <string name="move">Move</string>
    <string name="go_to_folder">Go to Folder</string>
    <string name="never_show_download_notice">Never show again</string>
    <string name="add_bookmark_title_label">Title:</string>
    <string name="add_bookmark_url_label">URL:</string>
    <string name="add_bookmark_dest_folder_label">Destination Folder:</string>
    <string name="add_bookmark_new_folder">New Folder</string>
    <string name="add_bookmark_save">Save</string>
    <string name="bookmarks_root_folder">bookmarks</string>
    <string name="bookmarks_new_folder">+ New Folder</string>
    <string name="search">Search</string>
    <string name="clear_history">Clear History</string>
    <string name="ad_blocker">Ad Blocker</string>
    <string name="app_title">LM videodownloader</string>
    <string name="about">LM videodownloader is a browser app for downloading videos
        \n\nCopyright ©2018 Loremar Marabillas\n\nThis program is free software and licensed
        under the GNU General Public License v2.0 </string>
    <string name="try_these_sites">Try these sites</string>
    <string name="enable_ad_blocking">Enable Ad-blocking</string>
    <string name="automatically_start_video_detection">Automatically start video detection</string>
    <string name="get_videos">GET VIDEOS</string>
</resources>
