<?xml version="1.0" encoding="utf-8"?><!--
  ~     LM videodownloader is a browser app for android, made to easily
  ~     download videos.
  ~     Copyright (C) 2018 Loremar Marabillas
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/addBookmarkTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bookmark_title_label"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addBookmarkTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addBookmarkTitleLabel" />

    <TextView
        android:id="@+id/addBookmarkURLLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bookmark_url_label"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addBookmarkTitle" />

    <TextView
        android:id="@+id/addBookmarkURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addBookmarkURLLabel" />

    <TextView
        android:id="@+id/addBookmarksDestFolderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bookmark_dest_folder_label"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addBookmarkURL" />

    <TextView
        android:id="@+id/addBookmarkDestFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addBookmarksDestFolderLabel" />

    <!--todo fix: height of folderlist needs to be fixed instead of wrap content
    Or instead of fixed, maybe setMaxHeight?-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/addBookmarkFoldersList"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/darkgraybounds"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addBookmarkDestFolder" />

    <TextView
        android:id="@+id/addBookmarkNewFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_bookmark_new_folder"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="@drawable/white_button"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addBookmarkSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addBookmarkFoldersList" />

    <TextView
        android:id="@+id/addBookmarkSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_bookmark_save"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="@drawable/white_button"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addBookmarkNewFolder"
        app:layout_constraintTop_toBottomOf="@id/addBookmarkFoldersList" />
</android.support.constraint.ConstraintLayout>